# AhoCorasikCXX

./: AhoCorasik  AhoCorasik.cbp  AhoCorasik2  AhoCorasik2_test  AhoCorasik_test  CMakeLists.txt
header/: AhoCorasik.h  AhoCorasik2.h
src/: AhoCorasik.cpp  AhoCorasik2.cpp  main.cpp  main2.cpp
test/: AhoCorasik2_test.cpp  AhoCorasik_test.cpp
